syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.servicea.person";
option java_outer_classname = "PersonProto";
option objc_class_prefix = "PER";

package person;

service PersonService {
  rpc GetPersonById(PersonRequestId) returns (PersonResponse) {}
  rpc GetPersonByCarId(PersonRequestCarId) returns (stream PersonResponse) {}
}

message PersonRequestId {
  string id = 1;
}

message PersonRequestCarId {
  string carId = 1;
}

message PersonResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
  string carId = 4;
}